--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {},
   "keywords": [],
-  "author": "",
+  "author": "m_morozova",
   "license": "ISC",
   "devDependencies": {
     "@playwright/test": "^1.49.1",
